# SyGuS-Generator

./: CMakeLists.txt  Pitch.md  README.md  main.cpp  test.cpp  tests.cpp
include/: bfs_strategy.hpp  sa_strategy.hpp  sygus_synthesizer.hpp  synthesis_strategy.hpp
old/: BfsStrategy.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  SyGuSParser.cpp  SyGuSParser.h  SyGuSSynthesizer.cpp  SyGuSSynthesizer.h  SynthesisStrategy.h
src/: bfs_strategy.cpp  sa_strategy.cpp  sygus_parser.cpp  sygus_synthesizer.cpp  synthesis_strategy.cpp
